# uniforum-project

./: .gitignore  package-lock.json  readme.txt  uniforum_documentation.docx
.github/workflows/: academic-forum-deploy.yml  analysis-deploy.yml  course-management-deploy.yml  deploy-academicForum-QA.yml  deploy-frontend.yml  deploy-userManagement.yml  discussion-deploy.yml  moderation-deploy.yml  reply-deploy.yml  (+4 more)
frontend/: index.html  package-lock.json  package.json  readme.md
uniforum-backend/administration-domain/config-service/: Cargo.toml  Dockerfile  readme.txt
uniforum-backend/administration-domain/config-service/src/: main.rs  routes.rs
uniforum-backend/administration-domain/config-service/src/controllers/: config_controller.rs
uniforum-backend/administration-domain/config-service/src/models/: config.rs
uniforum-backend/administration-domain/config-service/src/repositories/: config_repository.rs
uniforum-backend/administration-domain/config-service/src/services/: config_service.rs
uniforum-backend/administration-domain/security-audit-service/: Cargo.toml  Dockerfile
uniforum-backend/administration-domain/security-audit-service/src/: main.rs  routes.rs
uniforum-backend/administration-domain/security-audit-service/src/controllers/: audit_controller.rs
uniforum-backend/administration-domain/security-audit-service/src/models/: audit.rs
uniforum-backend/administration-domain/security-audit-service/src/repositories/: audit_repository.rs
uniforum-backend/administration-domain/security-audit-service/src/services/: audit_service.rs
(+296 files in other folders)
