[package]
name = "security-audit-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
dotenv = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

